--- a/theme/templates/article.html
+++ b/theme/templates/article.html
@@ -1,5 +1,12 @@
 {% extends "base.html" %}
-{% block title %}{{ article.title|striptags }}{% endblock %}
+{% block title %}{{ SITENAME }} | {{ article.title|striptags }}{% endblock %}
+{% block meta %}
+  <meta property="og:type" content="article" />
+  <meta name="description" content="{{ article.summary|striptags }}" />
+  {% for tag in article.tags %}
+    <meta property="article:tag" content="{{ tag }}" />
+  {% endfor %}
+{% endblock %}
 {% block content %}
 <section id="content" class="body">
   <article class="container">
