--- a/theme/templates/article.html
+++ b/theme/templates/article.html
@@ -25,7 +25,7 @@
       <div id="disqus_thread"></div>
       <script type="text/javascript">
         var disqus_identifier = "{{ article.url }}";
-        var disqus_url = "{{ SITEURL }}/{{ article.url }}";
+        var disqus_url = "/{{ article.url }}";
         (function() {
         var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
         dsq.src = 'http://{{ DISQUS_SITENAME }}.disqus.com/embed.js';
