--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -12,14 +12,14 @@
                     <article class="hentry">
                         <header>
                             <h1>
-                                <a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a>
+                                <a href="/{{ article.url }}">{{ article.title }}</a>
                             </h1>
                             <span class="date">{{ article.locale_date }}</span>
                         </header>
 
                         <div class="entry-content">
                             {{ article.summary }}
-                            <a class="readmore" href="{{ SITEURL }}/{{ article.url }}">read more</a>
+                            <a class="readmore" href="/{{ article.url }}">read more</a>
                         </div>
                     </article>
                 </li>
@@ -34,7 +34,7 @@
     {% else %}
     <h2>Pages</h2>
         {% for page in PAGES %}
-            <li><a href="{{ SITEURL }}/{{ page.url }}">{{ page.title }}</a></li>
+            <li><a href="/{{ page.url }}">{{ page.title }}</a></li>
         {% endfor %}
     {% endif %}
     </div>
