--- a/theme/templates/taglist.html
+++ b/theme/templates/taglist.html
@@ -1,7 +1,7 @@
 {% if article.tags %}
   <p>Tags: 
   {% for tag in article.tags %}
-    <a href="{{ SITEURL }}/{{ tag.url }}">{{ tag }}</a>
+    <a href="/{{ tag.url }}">{{ tag }}</a>
   {% endfor %}
   </p>
 {% endif %}
